Подготовка проекта к верстке Добавил иконки, шрифты

--- a/source/index.html
+++ b/source/index.html
@@ -4,14 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Описание проекта">
-    <title>ProjectName</title>
+    <meta name="description" content="Самый большой фитнесс центр за Уралом для всех спортсменов.">
+    <title>HTML Academy: Fitness</title>
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="preload" href="fonts/alumni-sans/alumni-sans-v18-cyrillic_latin-600.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/alumni-sans/alumni-sans-v18-cyrillic_latin-800.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/roboto-condensed/roboto-condensed-v27-cyrillic_latin-300.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/roboto-condensed/roboto-condensed-v27-cyrillic_latin-700.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/roboto-condensed/roboto-condensed-v27-cyrillic_latin-regular.woff2" as="font" crossorigin="anonymous">
+    <link rel="icon" href="favicon.ico"> <!-- 32×32 -->
+    <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicons/apple.png"> <!-- 180×180 -->
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <div class="container"></div>
+        <div class="container">
+          <div class="logo">
+            <a href="#">Supergym</a>
+          </div>
+          <div class="contact">
+            <a class="contact-phone" href="+78005555555">8-800-555-55-55</a>
+          </div>
+          <div class="hero">
+
+          </div>
+        </div>
       </header>
       <main>
         <section class="intro">
