--- a/source/index.html
+++ b/source/index.html
@@ -30,14 +30,16 @@
             </div>
           </nav>
           <div class="header__hero hero">
-            <ul class="hero__list">
-              <li class="hero__list-item"><span>Тренажёрный зал</span></li>
-              <li class="hero__list-item"><span>Групповые занятия</span></li>
-              <li class="hero__list-item"><span>Кардио-зона</span></li>
-            </ul>
-            <h3 class="hero__title hero__title--city">Омск</h3>
-            <h2 class="hero__title">Фитнес центр</h2>
-            <a class="hero-btn btn btn--hero" href="#">Купить абонемент</a>
+            <div class="hero__wrapper">
+              <ul class="hero__list">
+                <li class="hero__list-item">Тренажёрный&nbsp;зал</li>
+                <li class="hero__list-item">Групповые&nbsp;занятия</li>
+                <li class="hero__list-item">Кардио&nbsp;зона</li>
+              </ul>
+              <h3 class="hero__title hero__title--city">Омск</h3>
+              <h2 class="hero__title hero__title--name">Фитнес центр</h2>
+              <a class="hero-btn btn btn--hero" href="#">Купить абонемент</a>
+            </div>
             <div class="hero__image">
               <picture>
                 <source type="image/webp" media="(max-width: 1365px)" srcset="img/hero-tablet.webp 1x, img/hero-tablet@2x.webp 2x">
@@ -49,7 +51,7 @@
           </div>
         </div>
       </header>
-      <main>
+      <main class="main">
         <h1 class="visually-hidden">Supergym - самый большой фитнесс центр за Уралом.</h1>
         <section>
           <div class="container">
@@ -83,7 +85,7 @@
           </div>
         </section>
       </main>
-      <footer>
+      <footer class="footer">
         <div class="container"></div>
       </footer>
     </div>
