--- a/source/index.html
+++ b/source/index.html
@@ -53,35 +53,51 @@
       </header>
       <main class="main">
         <h1 class="visually-hidden">Supergym - самый большой фитнесс центр за Уралом.</h1>
-        <section>
+        <section class="gym">
+          <h2 class="visually-hidden">Описание Тренажерного зала</h2>
           <div class="container">
-            <h2>Тренажерный зал</h2>
-            <p>Просторный зал площадью 900 кв/м</p>
-            <p>Supergym – самый большой фитнес центр за Уралом и идеальное место для укрепления тела и здоровья. Тренажерный зал оснащен всем необходимым современным оборудованием для всех спортсменов.</p>
-            <p>В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажерами. Также в фитнес центре есть несколько оборудованных залов для различных видов групповых занятий.</p>
-            <picture>
-              <source type="image/webp" media="(max-width: 767px)" srcset="img/gym-mobile.webp 1x, img/gym-mobile@2x.webp 2x">
-              <source type="image/webp" media="(max-width: 1365px)" srcset="img/gym-tablet.webp 1x, img/gym-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/gym.webp 1x, img/gym@2x.webp 2x">
-              <source media="(max-width: 767px)" srcset="img/gym-mobile.png 1x, img/gym-mobile@2x.png 2x">
-              <source media="(max-width: 1365px)" srcset="img/gym-tablet.png 1x, img/gym-tablet@2x.png 2x">
-              <img src="img/gym.png" srcset="img/gym@2x.png" alt="Общий вид на тренажеры в зале." width="660" height="401">
-            </picture>
-            <picture>
-              <source type="image/webp" media="(max-width: 767px)" srcset="img/video-poster-mobile.webp 1x, img/video-poster-mobile@2x.webp 2x">
-              <source type="image/webp" media="(max-width: 1365px)" srcset="img/video-poster-tablet.webp 1x, img/video-poster-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/video-poster.webp 1x, img/video-poster@2x.webp 2x">
-              <source media="(max-width: 767px)" srcset="img/video-poster-mobile.png 1x, img/video-poster-mobile@2x.png 2x">
-              <source media="(max-width: 1365px)" srcset="img/video-poster-tablet.png 1x, img/video-poster-tablet@2x.png 2x">
-              <img src="img/video-poster.png" srcset="img/video-poster@2x.png" alt="Постер видео тренажерного зала." width="364" height="228">
-            </picture>
-            <button>
-              <span class="visually-hidden">Нажмите на кнопку для просмотра видео.</span>
-              <svg>
-                <use href="img/sprite.svg#play-button"></use>
-              </svg>
-            </button>
-
+            <div class="gym__container">
+              <div class="gym__wrapper">
+                <div class="gym__title">
+                  <h3>Тренажерный зал</h3>
+                  <h6>Просторный зал площадью 900 кв/м</h6>
+                </div>
+                <div class="gym__description">
+                  <p>Supergym – самый большой фитнес центр за Уралом и идеальное место для укрепления тела и здоровья. Тренажерный зал оснащен всем необходимым современным оборудованием для всех спортсменов.</p>
+                  <p>В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажерами. Также в фитнес центре есть несколько оборудованных залов для различных видов групповых занятий.</p>
+                </div>
+              </div>
+              <div class="gym__media">
+                <div class="gym__image">
+                  <picture>
+                    <source type="image/webp" media="(max-width: 767px)" srcset="img/gym-mobile.webp 1x, img/gym-mobile@2x.webp 2x">
+                    <source type="image/webp" media="(max-width: 1365px)" srcset="img/gym-tablet.webp 1x, img/gym-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/gym.webp 1x, img/gym@2x.webp 2x">
+                    <source media="(max-width: 767px)" srcset="img/gym-mobile.png 1x, img/gym-mobile@2x.png 2x">
+                    <source media="(max-width: 1365px)" srcset="img/gym-tablet.png 1x, img/gym-tablet@2x.png 2x">
+                    <img src="img/gym.png" srcset="img/gym@2x.png" alt="Общий вид на тренажеры в зале." width="660" height="401">
+                  </picture>
+                </div>
+                <div class="gym__video">
+                  <div class="gym__poster">
+                    <picture>
+                      <source type="image/webp" media="(max-width: 767px)" srcset="img/video-poster-mobile.webp 1x, img/video-poster-mobile@2x.webp 2x">
+                      <source type="image/webp" media="(max-width: 1365px)" srcset="img/video-poster-tablet.webp 1x, img/video-poster-tablet@2x.webp 2x">
+                      <source type="image/webp" srcset="img/video-poster.webp 1x, img/video-poster@2x.webp 2x">
+                      <source media="(max-width: 767px)" srcset="img/video-poster-mobile.png 1x, img/video-poster-mobile@2x.png 2x">
+                      <source media="(max-width: 1365px)" srcset="img/video-poster-tablet.png 1x, img/video-poster-tablet@2x.png 2x">
+                      <img src="img/video-poster.png" srcset="img/video-poster@2x.png" alt="Постер видео тренажерного зала." width="364" height="228">
+                    </picture>
+                  </div>
+                  <button class="gym__video-button" type="button">
+                    <span class="visually-hidden">Нажмите на кнопку для просмотра видео.</span>
+                    <svg width="17px" height="17px">
+                      <use href="img/sprite.svg#play-button"></use>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </main>
