Добавил разметку карточки абонимента

--- a/source/index.html
+++ b/source/index.html
@@ -54,7 +54,7 @@
       <main class="main">
         <h1 class="visually-hidden">Supergym - самый большой фитнесс центр за Уралом.</h1>
         <section class="gym">
-          <h2 class="visually-hidden">Описание Тренажерного зала</h2>
+          <h2 class="visually-hidden">Описание тренажерного зала.</h2>
           <div class="container">
             <div class="gym__container">
               <div class="gym__wrapper">
@@ -97,6 +97,61 @@
                   </button>
                 </div>
               </div>
+            </div>
+          </div>
+        </section>
+        <section class="subscription-price">
+          <h2 class="visually-hidden">Расчет стоимости абонемента для занятий в тренажерном зале Supergym.</h2>
+          <div class="container">
+            <div class="subscription-price__wrapper">
+              <h3 class="subscription-price__title">Абонементы</h3>
+              <ul class="subscription-price__period-list">
+                <li class="subscription-price__period-item">
+                  <button class="subscription-price__period-btn" type="button">1 месяц</button>
+                </li>
+                <li class="subscription-price__period-item">
+                  <button class="subscription-price__period-btn" type="button">6 месяцев</button>
+                </li>
+                <li class="subscription-price__period-item">
+                  <button class="subscription-price__period-btn" type="button">12 месяцев</button>
+                </li>
+              </ul>
+              <div class="subscription-price__multiple-lists">
+                <ul class="subscription-price__price-list">
+                  <li class="subscription-price__price-item price-card">
+                    <h4 class="price-card__title">С тренером</h4>
+                    <p class="price-card__description">12 занятий</p>
+                    <p class="price-card__price">5000
+                      <svg width="30" height="42">
+                        <use href="img/sprite.svg#ruble"></use>
+                      </svg>
+                    </p>
+                    <a class="price-card__btn btn btn--price" href="#">Купить абонемент</a>
+                  </li>
+                  <li class="subscription-price__price-item price-card">
+                    <h4 class="price-card__title">Дневной</h4>
+                    <p class="price-card__description">с 8:00 до 17:00</p>
+                    <p class="price-card__price">1700
+                      <svg width="30" height="42">
+                        <use href="img/sprite.svg#ruble"></use>
+                      </svg>
+                    </p>
+                    <a class="price-card__btn btn btn--price" href="#">Купить абонемент</a>
+                  </li>
+                  <li class="subscription-price__price-item price-card">
+                    <h4 class="price-card__title">Полный день</h4>
+                    <p class="price-card__description">с 8:00 до 22:00</p>
+                    <p class="price-card__price">2700
+                      <svg width="30" height="42">
+                        <use href="img/sprite.svg#ruble"></use>
+                      </svg>
+                    </p>
+                    <a class="price-card__btn btn btn--price" href="#">Купить абонемент</a>
+                  </li>
+                </ul>
+              </div>
+
+
             </div>
           </div>
         </section>
