Добавмл разметку секции Games

--- a/source/index.html
+++ b/source/index.html
@@ -154,11 +154,39 @@
                     <source type="image/webp" media="(max-width: 1365px)" srcset="img/rogue-pancake-tablet.webp 1x, img/rogue-pancake-tablet@2x.webp 2x">
                     <source type="image/webp" srcset="img/rogue-pancake.webp 1x, img/rogue-pancake@2x.webp 2x">
                     <source media="(max-width: 1365px)" srcset="img/rogue-pancake-tablet.png 1x, img/rogue-pancake-tablet@2x.png 2x">
-                    <img src="img/rogue-pancake.png" srcset="img/rogue-pancake@2x.png" alt="Диски для штанги/гантели производителя Rogue." width="470" height="494">
+                    <img src="img/rogue-pancake.png" srcset="img/rogue-pancake@2x.png" alt="Диски для штанги или гантели производителя Rogue." width="470" height="494">
                   </picture>
                 </div>
               </div>
 
+            </div>
+          </div>
+        </section>
+        <section class="games">
+          <h2 class="visually-hidden">Подать заявку на участие в ежегодных соревнованиях по CrossFit.</h2>
+          <div class="container">
+            <div class="games__bunner">
+              <h3 class="games__bunner-title">Super games</h3>
+              <div class="games__bunner-games-date-wrapper">
+                <p class="games__bunner-games-date">Дата</p>
+                <p class="games__bunner-games-date-value">7 <span>Марта 2019</span></p>
+              </div>
+              <div class="games__bunner-games-time-wrapper">
+                <p class="games__bunner-games-time">Время</p>
+                <p class="games__bunner-games-time-value">12:00</p>
+              </div>
+              <p class="games__bunner-slogan">Ежегодные соревнования по CrossFit</p>
+              <a class="games__bunner-btn btn btn--games" href="#">Заполнить заявку</a>
+            </div>
+            <div class="games__image">
+              <picture>
+                <source type="image/webp" media="(max-width: 767px)" srcset="img/games-mobile.webp 1x, img/games-mobile@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 1365px)" srcset="img/games-tablet.webp 1x, img/games-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/games.webp 1x, img/games@2x.webp 2x">
+                <source media="(max-width: 767px)" srcset="img/games-mobile.png 1x, img/games-mobile@2x.png 2x">
+                <source media="(max-width: 1365px)" srcset="img/games-tablet.png 1x, img/games-tablet@2x.png 2x">
+                <img src="img/games.jpg" srcset="img/games@2x.jpg" alt="Атлет в клубах талька стремится к победе.">
+              </picture>
             </div>
           </div>
         </section>
