--- a/source/index.html
+++ b/source/index.html
@@ -165,29 +165,67 @@
         <section class="games">
           <h2 class="visually-hidden">Подать заявку на участие в ежегодных соревнованиях по CrossFit.</h2>
           <div class="container">
-            <div class="games__bunner">
-              <h3 class="games__bunner-title">Super games</h3>
-              <div class="games__bunner-games-date-wrapper">
-                <p class="games__bunner-games-date">Дата</p>
-                <p class="games__bunner-games-date-value">7 <span>Марта 2019</span></p>
+            <div class="games__container">
+              <div class="games__bunner">
+                <h3 class="games__bunner-title">Super games</h3>
+                <div class="games__bunner-games-date-wrapper">
+                  <p class="games__bunner-games-date">Дата</p>
+                  <p class="games__bunner-games-date-value">7 <span class="games__bunner-games-date-value-text">Марта 2019</span></p>
+                </div>
+                <div class="games__bunner-games-time-wrapper">
+                  <p class="games__bunner-games-time">Время</p>
+                  <p class="games__bunner-games-time-value">12:00</p>
+                </div>
+                <p class="games__bunner-slogan">Ежегодные соревнования по CrossFit</p>
+                <a class="games__bunner-btn btn btn--games" href="#">Заполнить заявку</a>
               </div>
-              <div class="games__bunner-games-time-wrapper">
-                <p class="games__bunner-games-time">Время</p>
-                <p class="games__bunner-games-time-value">12:00</p>
+              <div class="games__image">
+                <picture>
+                  <source type="image/webp" media="(max-width: 767px)" srcset="img/games-mobile.webp 1x, img/games-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(max-width: 1365px)" srcset="img/games-tablet.webp 1x, img/games-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/games.webp 1x, img/games@2x.webp 2x">
+                  <source media="(max-width: 767px)" srcset="img/games-mobile.png 1x, img/games-mobile@2x.png 2x">
+                  <source media="(max-width: 1365px)" srcset="img/games-tablet.png 1x, img/games-tablet@2x.png 2x">
+                  <img src="img/games.jpg" srcset="img/games@2x.jpg" alt="Атлет в клубах талька стремится к победе." width="660" height="500">
+                </picture>
               </div>
-              <p class="games__bunner-slogan">Ежегодные соревнования по CrossFit</p>
-              <a class="games__bunner-btn btn btn--games" href="#">Заполнить заявку</a>
             </div>
-            <div class="games__image">
-              <picture>
-                <source type="image/webp" media="(max-width: 767px)" srcset="img/games-mobile.webp 1x, img/games-mobile@2x.webp 2x">
-                <source type="image/webp" media="(max-width: 1365px)" srcset="img/games-tablet.webp 1x, img/games-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/games.webp 1x, img/games@2x.webp 2x">
-                <source media="(max-width: 767px)" srcset="img/games-mobile.png 1x, img/games-mobile@2x.png 2x">
-                <source media="(max-width: 1365px)" srcset="img/games-tablet.png 1x, img/games-tablet@2x.png 2x">
-                <img src="img/games.jpg" srcset="img/games@2x.jpg" alt="Атлет в клубах талька стремится к победе.">
-              </picture>
+          </div>
+        </section>
+        <section class="jury">
+          <h2 class="visually-hidden">Список судей жюри наших соревнований.</h2>
+          <div class="container">
+            <div class="jury__wrapper">
+              <h3 class="jury__title">Жюри</h3>
+              <button class="jury-btn jury-btn--previous btn btn--juri"></button>
+              <div class="jury__swiper">
+                <ul class="jury__list">
+                  <li class="jury__item judge-card">
+                    <h4 class="judge-card__name"></h4>
+                    <div class="judge-card__foto">
+                      <picture>
+                        <source type="image/webp" media="(max-width: 767px)" srcset="img/-mobile.webp 1x, img/-mobile@2x.webp 2x">
+                        <source type="image/webp" media="(max-width: 1365px)" srcset="img/-tablet.webp 1x, img/-tablet@2x.webp 2x">
+                        <source type="image/webp" srcset="img/.webp 1x, img/@2x.webp 2x">
+                        <source media="(max-width: 767px)" srcset="img/-mobile.png 1x, img/-mobile@2x.png 2x">
+                        <source media="(max-width: 1365px)" srcset="img/-tablet.png 1x, img/-tablet@2x.png 2x">
+                        <img src="" alt="" width="260" height="294">
+                      </picture>
+                    </div>
+                    <div class="judge-card__achievements">
+                      <h4 class="judge-card__achievements-name"></h4>
+                      <ul class="judge-card__achievements-list">
+                        <li class="judge-card__achievements-item"></li>
+                        <li class="judge-card__achievements-item"></li>
+                        <li class="judge-card__achievements-item"></li>
+                      </ul>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <button class="jury-btn jury-btn--next btn btn--juri"></button>
             </div>
+
           </div>
         </section>
       </main>
