Добавил разметку блокоа приемущества акции отзовы  форма контакты  футера

--- a/source/index.html
+++ b/source/index.html
@@ -298,12 +298,157 @@
                 </svg>
               </button>
             </div>
-
+          </div>
+        </section>
+        <section class="advantages">
+          <div class="container">
+            <div class="advantages__wrapper">
+              <h2 class="advantages__title">Наши преимущества</h2>
+              <ul class="advantages__list">
+                <li class="advantages__item advantages-card">
+                  <div class="advantages-card__value">
+                    <p>900</p>
+                    <p>кв/м</p>
+                  </div>
+                  <div class="advantages-card__description">
+                    <h6>Площадь</h6>
+                    <p>Занимайтесь без очередей и толкучки</p>
+                  </div>
+                </li>
+                <li class="advantages__item  advantages__item--special advantages-card advantages-card--special">
+                  <div class="advantages-card__value advantages-card__value--special">
+                    <p>100</p>
+                    <p>Тренажеров</p>
+                  </div>
+                  <div class="advantages-card__description advantages-card__description--special">
+                    <p>Современные тренажеры на все группы мышц</p>
+                  </div>
+                </li>
+                <li class="advantages__item advantages-card">
+                  <div class="advantages-card__value">
+                    <p>70</p>
+                    <p>машин</p>
+                  </div>
+                  <div class="advantages-card__description">
+                    <h6>Собственная парковка</h6>
+                    <p>Вы всегда найдете место для своей машины на нашей парковке</p>
+                  </div>
+                </li>
+                <li class="advantages__item advantages-card">
+                  <div class="advantages-card__value">
+                    <p>350</p>
+                    <p>мест</p>
+                  </div>
+                  <div class="advantages-card__description">
+                    <h6>Комфорт</h6>
+                    <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
+                  </div>
+                </li>
+                <li class="advantages__item advantages-card">
+                  <div class="advantages-card__value">
+                    <p>5+</p>
+                    <p>лет</p>
+                  </div>
+                  <div class="advantages-card__description">
+                    <h6>Тренерский опыт</h6>
+                    <p>Добивайтесь своих целей быстрее с профессиональным тренером</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section class="stocks">
+          <div class="container">
+            <div class="stocks-wrapper">
+              <article class="stocks__ticket-for-year">
+                <div class="stocks__ticket-for-year-description">
+                  <h4>Год</h4>
+                  <p>4999</p>
+                  <p>Безлимитный абонемент в тренажерный зал</p>
+                  <a href="#">Подробнее</a>
+                </div>
+                <div class="stocks__ticket-for-year-bunner">
+                  <picture>
+                    <source type="image/webp" media="(max-width: 767px)" srcset="img/advantages-bunner-mobile.webp 1x, img/advantages-bunner-mobile@2x.webp 2x">
+                    <source type="image/webp" media="(max-width: 1365px)" srcset="img/advantages-bunner-tablet.webp 1x, img/advantages-bunner-tablet@2x.webp 2x">
+                    <source type="image/webp" srcset="img/advantages-bunner.webp 1x, img/advantages-bunner@2x.webp 2x">
+                    <source media="(max-width: 767px)" srcset="img/advantages-bunner-mobile.png 1x, img/advantages-bunner-mobile@2x.png 2x">
+                    <source media="(max-width: 1365px)" srcset="img/advantages-bunner-tablet.png 1x, img/advantages-bunner-tablet@2x.png 2x">
+                    <img src="img/advantages-bunner.jpg" srcset="img/advantages-bunner@2x.jpg" alt="Улыбающаяся девушка одетая для занятия фитнесом." width="280" height="462">
+                  </picture>
+                </div>
+              </article>
+              <article class="stocks__month-for-free">
+                <div class="stocks__month-for-free-description">
+                  <h4>Месяц бесплатно</h4>
+                  <p>Приведи друга, получи абонемент в подарок</p>
+                  <a href="#">Подробнее</a>
+                </div>
+              </article>
+              <article class="stocks__corporate-discount">
+                <h4>Скидка 20%</h4>
+                <p>Корпоративный фитнес с командой</p>
+                <a href="#">Подробнее</a>
+              </article>
+            </div>
+          </div>
+        </section>
+        <section class="faq">
+          <div class="container"></div>
+        </section>
+        <section class="feedback">
+          <div class="container"></div>
+        </section>
+        <section class="form-contacts">
+          <div class="container">
+            <div class="form-contacts__form form">
+              <h3 class="form__title">Бесплатное занятие </h3>
+              <form action="form__form"></form>
+            </div>
+            <div class="form-contacts__contacts contacts">
+              <h3 class="contacts__title">Контакты</h3>
+              <ul>
+                <li>
+                  <h5>Адрес</h5>
+                  <p>г. Омск, ул. 60 лет Октября, 7</p>
+                </li>
+                <li>
+                  <h5>Телефон</h5>
+                  <a href="">8-800-555-55-55</a>
+                </li>
+                <li>
+                  <h5>График работы:</h5>
+                  <p>Пн-Вс: с 8:00 до 22:00</p>
+                </li>
+                <li>
+                  <h5>Email:</h5>
+                  <a href="">omsk@supergym.ru</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </section>
       </main>
       <footer class="footer">
-        <div class="container"></div>
+        <div class="container">
+          <div class="footer__wrapper">
+            <div class="footer__logo"></div>
+            <div class="footer__nav">
+              <a href="">Услуги</a>
+              <a href="">Абонементы</a>
+              <a href="">Акции</a>
+              <a href="">Тренеры</a>
+              <a href="">Расписание</a>
+            </div>
+            <div class="footer__social">
+              <a href=""><span class="visually-hidden">Мы в соцсети ВКонтакте.</span></a>
+              <a href=""><span class="visually-hidden">Мы в соцсети Однокласники.</span></a>
+              <a href=""><span class="visually-hidden">Мы в соцсети Reddit.</span></a>
+            </div>
+          </div>
+
+        </div>
       </footer>
     </div>
 
